add ping feature
